# System_Monitor

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: CollectorFactory.h.9EB51B328CA16DF7.idx  CollectorFactory.h.DB31AC1BF854CCEF.idx  Collectors.cpp.E8204E1B64F3EEEA.idx  Collectors.cpp.F9AA016EC1BCB97C.idx  Collectors.h.6202A2FF2E206DD1.idx  Collectors.h.A7BD968B973E5DB6.idx  Logger.h.2D577B8505C6C947.idx  Logger.h.795120BC05C893DA.idx  main.cpp.939FA8AF35FC9999.idx  main.cpp.C3EEC6B1F1B69E65.idx
include/: CollectorFactory.h  Collectors.h  Logger.h
src/: Collectors.cpp  main.cpp
